foi tirado algumas mensagens de erro

--- a/src/app/empresa/funcionario-form/funcionario-form.component.html
+++ b/src/app/empresa/funcionario-form/funcionario-form.component.html
@@ -76,12 +76,12 @@
 
       <div class="col-md-6">
         <div class="form-group">
-          <label for="dataNascimento">Data de Admissão</label>
+          <label for="dataAdmissao">Data de Admissão</label>
           <input type="date"
                  class="form-control"
-                 id="dataNascimento"
-                 name="dataNascimento"
-                 placeholder="Data de Nascimento"
+                 id="dataAdmissao"
+                 name="dataAdmissao"
+                 placeholder="Data de Admissao"
                  [(ngModel)]="funcionario.dataAdmissao" required>
         </div>
       </div>
