--- a/src/app/empresa/funcionario-lista/funcionario-lista.component.html
+++ b/src/app/empresa/funcionario-lista/funcionario-lista.component.html
@@ -53,7 +53,7 @@
           <td>{{ funcionario.nomeSupervisor }}</td>
           <td>
 
-            <button class="btn btn-warning" routerLink="/funcionario-form/{{ funcionario.id }}">
+            <button class="btn btn-warning" routerLink="/funceeeionario-form/{{ funcionario.id }}">
               <i class="fa-solid fa-square-pen"></i>
             </button>
 
