--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -29,6 +29,7 @@
               <a class="nav-link" routerLink="/funcionario-lista">Funcionário</a>
               <a class="nav-link" routerLink="/projeto-lista">Projeto</a>
               <a class="nav-link" routerLink="/orcamento-lista">Orçamento</a>
+              <a class="nav-link" routerLink="/pessoa-lista">Pessoa</a>
             </nav>
           </div>
         </div>
