Foi realizado a criação de localizar a pessoa por cpf.

--- a/src/app/empresa/funcionario-form/funcionario-form.component.html
+++ b/src/app/empresa/funcionario-form/funcionario-form.component.html
@@ -43,7 +43,7 @@
                  id="nome"
                  name="nome"
                  placeholder="Nome"
-                 [(ngModel)]="funcionario.nome" required>
+                 [(ngModel)]="funcionario.nomePessoa" required>
         </div>
       </div>
 
