foi implementado o preenchimento automatico da matricula.

--- a/src/app/empresa/funcionario-form/funcionario-form.component.html
+++ b/src/app/empresa/funcionario-form/funcionario-form.component.html
@@ -30,7 +30,7 @@
                  name="cpf"
                  placeholder="CPF do Funcionário"
                  [(ngModel)]="funcionario.cpf"
-                (blur)="onNomePorCpf()" required/>
+                 (blur)="onNomePorCpf()" required/>
 
         </div>
       </div>
@@ -87,7 +87,9 @@
                  id="dataAdmissao"
                  name="dataAdmissao"
                  placeholder="Data de Admissao"
-                 [(ngModel)]="funcionario.dataAdmissao" required>
+                 [(ngModel)]="funcionario.dataAdmissao" required
+                 (blur)="onDataAdmissaoChange()"
+         />
         </div>
       </div>
 
