--- a/src/app/empresa/funcionario-lista/funcionario-lista.component.html
+++ b/src/app/empresa/funcionario-lista/funcionario-lista.component.html
@@ -29,7 +29,7 @@
   <div class="row">
     <div class="col-md-12">
       <table class="table table-hover">
-        <thead>
+        <thead class="table-header">
         <tr>
           <th>ID</th>
           <th>Nome</th>
@@ -37,7 +37,7 @@
           <th>Data de Admissão</th>
           <th>Cargo</th>
           <th>Salário</th>
-          <th>Supervisor</th>
+          <th >Supervisor</th>
           <th>Departamento</th>
           <th>Opções</th>
         </tr>
