foi implementado o preenchimento automatico da matricula.

--- a/src/app/empresa/funcionario-lista/funcionario-lista.component.html
+++ b/src/app/empresa/funcionario-lista/funcionario-lista.component.html
@@ -34,6 +34,7 @@
           <th>Nome</th>
           <th>Matricula</th>
           <th>Cargo</th>
+          <th >Salario</th>
           <th>Supervisor</th>
           <th>Departamento</th>
           <th>Opções</th>
@@ -47,7 +48,7 @@
           <td>{{ funcionario.matricula }}</td>
           <!--          <td>{{ funcionario.dataAdmissao }}</td>-->
           <td>{{ funcionario.cargo }}</td>
-          <!--          <td>{{ funcionario.salario }}</td>-->
+          <td>{{ funcionario.salario }}</td>
           <td>{{ funcionario.nomeSupervisor }}</td>
           <td>{{ funcionario.nomeDepartamento }}</td>
           <td>
