foi implementado o preenchimento automatico da matricula.

--- a/src/app/empresa/projeto-form/projeto-form.component.html
+++ b/src/app/empresa/projeto-form/projeto-form.component.html
@@ -1,9 +1,6 @@
-<h1 class="mt-4" xmlns:thousandSeparator="http://www.w3.org/1999/xhtml"
-    xmlns:thousandSeparator="http://www.w3.org/1999/xhtml" xmlns:thousandSeparator="http://www.w3.org/1999/xhtml"
-    xmlns:thousandSeparator="http://www.w3.org/1999/xhtml" xmlns:thousandSeparator="http://www.w3.org/1999/xhtml">
-  Cadastro de Projeto</h1>
+<h1>  Cadastro de Projeto</h1>
 <ol class="breadcrumb mb-4">
-  <li class="breadcrumb-item active">projetos</li>
+  <li class="breadcrumb-item active">Pessoa</li>
 </ol>
 
 <div class="container">
