--- a/src/app/empresa/pessoa-form/pessoa-form.component.html
+++ b/src/app/empresa/pessoa-form/pessoa-form.component.html
@@ -1,4 +1,123 @@
-<h1 class="mt-4">Cadastro de funcionário</h1>
+<h1 class="mt-4">Cadastro de Pessoa</h1>
 <ol class="breadcrumb mb-4">
-  <li class="breadcrumb-item active">Funcionário</li>
+  <li class="breadcrumb-item active">Pessoa</li>
 </ol>
+
+<div class="container">
+  <form #pessoaForm="ngForm" novalidate>
+
+    <div class="row">
+      <div class="col-md-12">
+        <!--      <div class="alert alert-success" role="alert">-->
+        <!--        Pessoa salvo com sucesso!-->
+        <!--      </div>-->
+        <!--      <div class="alert alert-danger" role="alert" *ngFor="let erro of erros">-->
+        <!--        {{ erros }}-->
+        <!--      </div>-->
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="nome">Nome:</label>
+          <input id="nome" type="text"
+                 class="form-control"
+                 placeholder="Nome"
+                 [(ngModel)]="pessoa.nome"
+                 name="cep" required/>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="cpf">CPF:</label>
+          <input id="cpf"
+                 type="text"
+                 class="form-control"
+                 placeholder="CPF"
+                 [(ngModel)]="pessoa.cpf"
+                 name="cpf"/>
+        </div>
+      </div>
+    </div>
+
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="nome">Email:</label>
+          <input id="email" type="text"
+                 class="form-control"
+                 placeholder="email"
+                 [(ngModel)]="pessoa.email"
+                 name="email" required/>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="cpf">Telefone:</label>
+          <input id="telefone"
+                 type="text"
+                 class="form-control"
+                 placeholder="Telefone"
+                 [(ngModel)]="pessoa.telefone"
+                 name="telefone"/>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="nome">Endereço:</label>
+          <input id="endereco" type="text"
+                 class="form-control"
+                 placeholder="Endereço"
+                 [(ngModel)]="pessoa.idEndereco"
+                 name="endereco" required/>
+        </div>
+      </div>
+
+      <div class="col-md-6">
+        <div class="form-group">
+          <label for="dataNascimento">Data de Nascimento:</label>
+          <input id="dataNascimento" type="date"
+                 class="form-control"
+                 placeholder="Data de Nascimento"
+                 [(ngModel)]="pessoa.dataNascimento"
+                 name="endereco" required/>
+        </div>
+      </div>
+
+
+    </div>
+
+    <div class="row">
+      <div class="col-md-3">
+        <button id="salvar"
+                type="submit"
+                class="btn btn-success"
+                *ngIf="!pessoa.id"
+                (click)="salvarPessoa(pessoaForm)">
+          <i class="fa fa-save" *ngIf="success"></i> Salvar
+
+        </button>
+        <button id="atualizar"
+                type="submit"
+                class="btn btn-primary ml-1"
+                *ngIf="pessoa.id"
+                [disabled]="pessoaForm.form.invalid"
+                (click)="atualizarPessoa(pessoaForm)">
+          <i class="fa-solid fa-arrows-rotate"></i> Atualizar
+        </button>
+
+        <button type="button" class="btn btn-danger ml-1" (click)="voltaParaPaginaDeListagem()">
+          <i class="fa-solid fa-circle-left"></i> Voltar
+        </button>
+      </div>
+    </div>
+
+  </form>
+</div>
