--- a/src/app/empresa/pessoa-lista/pessoa-lista.component.html
+++ b/src/app/empresa/pessoa-lista/pessoa-lista.component.html
@@ -46,8 +46,7 @@
           <td>{{ pessoa.email }}</td>
           <td>{{ pessoa.cpf }}</td>
           <td>{{ pessoa.telefone }}</td>
-          <td>{{ pessoa.idEndereco }}</td>
-
+          <td>{{ pessoa.cidadeEndereco }}</td>
           <td>
             <button class="btn btn-warning" routerLink="/endereco-form/{{ pessoa.id }}">
               <i class="fa-solid fa-square-pen"></i>
